# fake-ocaml

./: AGENTS.md  LICENSE  README.md  dune  dune-project  fake.opam
.github/workflows/: ci.yml
docs/design-docs/: address-provider.md  company-provider.md  index.md  initial-architecture.md
docs/design-docs/adr/: 0001-library-only-package.md
docs/exec-plans/: index.md
docs/exec-plans/active/: review-driven-api-hardening.md
docs/exec-plans/completed/: address-provider.md  company-provider.md  initial-project-foundation.md  lorem-paragraph.md  remove-program-surface.md  review-driven-api-hardening.md
docs/product-specs/: address-provider.md  company-provider.md  future-work.md  index.md  initial-public-api.md
docs/references/: faker-ruby-address.md  faker-ruby-company.md  index.md
lib/: address.ml  address.mli  company.ml  company.mli  dune  fake.ml  fake.mli  generator.ml  generator.mli  internet.ml  internet.mli  locale.ml  locale.mli  locale_data.ml  locale_data.mli  locale_data_en.ml  locale_data_ja_jp.ml  locale_data_types.ml  locale_data_types.mli  lorem.ml  lorem.mli  name.ml  name.mli
test/: address_test.ml  cli_json_test.ml  cli_tests.sh  company_test.ml  dune  generator_test.ml  internet_test.ml  locale_test.ml  lorem_test.ml  name_test.ml  static_address_data_tests.sh  static_contract_tests.sh
