(tests
 (names
  generator_test
  locale_test
  name_test
  internet_test
  lorem_test
  address_test
  company_test)
 (modules
  generator_test
  locale_test
  name_test
  internet_test
  lorem_test
  address_test
  company_test)
 (libraries fake alcotest))

(rule
 (alias runtest)
 (deps
  static_contract_tests.sh
  ../lib/locale.mli
  ../lib/name.ml
  ../lib/internet.ml
  ../lib/lorem.ml
  ../lib/address.ml
  ../lib/company.ml)
 (action
  (run
   bash
   %{dep:static_contract_tests.sh}
   %{dep:../lib/locale.mli}
   %{dep:../lib/name.ml}
   %{dep:../lib/internet.ml}
   %{dep:../lib/lorem.ml}
   %{dep:../lib/address.ml}
   %{dep:../lib/company.ml})))

(rule
 (alias runtest)
 (deps static_address_data_tests.sh ../lib/locale_data_ja_jp.ml)
 (action
  (run
   bash
   %{dep:static_address_data_tests.sh}
   %{dep:../lib/locale_data_ja_jp.ml})))
